--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-google-generativeai
-python-dotenv
-nltk
+streamlit==1.38.0
+google-generativeai==0.8.1
+python-dotenv==1.0.1
+nltk==3.9.1
